@@ -51,7 +51,5 @@
 	- autoindex PHP script (805)
 	- jupload (806)
 
- - delete old mail logs
-
- - periodically (once per day) index mail logs
-
+ - TRAP procmail config
+	- include put in wrong place
