@@ -28,6 +28,7 @@ disable=Features to deactivate when disabling,13,unix-Administration user (lock 
 delete_indom=Delete all Apache virtual hosts in domain when deleting?,1,1-Yes,0-No
 ldap=Store users and groups,1,1-In LDAP database,0-In local files
 compression=Backup compression format,1,0-gzip,1-bzip2,2-None (tar only)
+maillog_period=Number of days to keep processed mail logs,3,Forever
 
 line1.4=User interface settings,11
 display_max=Maximum number of domains to display,3,Unlimited
