@@ -1,0 +1,11 @@
+<header>Number of days to keep processed mail logs</header>
+
+Virtualmin will periodically scan server mail logs and store the results
+in a database file, for quicker searching using the <b>Search Mail Logs</b>
+page. This setting can be used to control how long this data is stored for,
+in the <tt>/var/webmin/procmail.*</tt> files. The default is 30 days, but you
+may want to decrease this if the processed logs are taking up too much disk
+space on your system.<p>
+
+<footer>
+
