@@ -5,6 +5,8 @@ do 'virtual-server-lib.pl';
 
 sub module_install
 {
+&foreign_require("cron", "cron-lib.pl");
+
 # Make sure the remote.cgi page is accessible in non-session mode
 local %miniserv;
 &get_miniserv_config(\%miniserv);
@@ -47,6 +49,25 @@ if ($config{'spam'} && $virtualmin_pro) {
 # Enable logging in Procmail, if we are using it
 if ($config{'spam'} && $virtualmin_pro) {
 	&enable_procmail_logging();
+
+	# And setup cron job to periodically process logs
+	local ($job) = grep { $_->{'user'} eq 'root' &&
+			      $_->{'command'} eq $maillog_cron_cmd }
+			    &cron::list_cron_jobs();
+	if (!$job) {
+		# Create, and run for the first time
+		$job = { 'mins' => int(rand()*60),
+			 'hours' => '0',
+			 'days' => '*',
+			 'months' => '*',
+			 'weekdays' => '*',
+			 'user' => 'root',
+			 'active' => 1,
+			 'command' => $maillog_cron_cmd };
+		&cron::create_cron_job($job);
+		&cron::create_wrapper($maillog_cron_cmd, $module_name,
+				      "maillog.pl");
+		}
 	}
 
 # Fix up old procmail scripts that don't call the clam wrapper
@@ -200,7 +221,6 @@ if (&foreign_installed("sshd")) {
 
 if ($virtualmin_pro) {
 	# Create the cron job for sending in script ratings
-	&foreign_require("cron", "cron-lib.pl");
 	local ($job) = grep { $_->{'user'} eq 'root' &&
 			      $_->{'command'} eq $ratings_cron_cmd }
 			    &cron::list_cron_jobs();
@@ -222,7 +242,6 @@ if ($virtualmin_pro) {
 	}
 
 # Create the cron job for collecting system info
-&foreign_require("cron", "cron-lib.pl");
 local ($job) = grep { $_->{'user'} eq 'root' &&
 		      $_->{'command'} eq $collect_cron_cmd }
 		    &cron::list_cron_jobs();
@@ -250,7 +269,6 @@ if ($config{'allow_subdoms'} eq '') {
 
 # Create the cron job for killing orphan php*-cgi processes
 if ($virtualmin_pro) {
-	&foreign_require("cron", "cron-lib.pl");
 	local ($job) = grep { $_->{'user'} eq 'root' &&
 			      $_->{'command'} eq $fcgiclear_cron_cmd }
 			    &cron::list_cron_jobs();
